--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Página de prueba<title>
+  <title>Pepijn<title>
 </head>
 <body>
-  <h1>Hola amiguitos!</h1>
-  <footer>gpuma 2017</footer>
+  <img src="pepijn.png">
 </body>
 </html>
