I suck at html/css please don't judge me

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Pepijn<title>
+  <title>Pepijn</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <img src="pepijn.png">
+  <img src="pepijn.png" class="center_image">
 </body>
 </html>
