Remove old project files, add Michelle page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <img src="pepijn.png" class="center_image">
+Hello world, hier is weinig te zien momenteel.
 </body>
 </html>
