Change title to Michelle's Website

--- a/michelle.html
+++ b/michelle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Countdown to June 29</title>
+  <title>Is Michelle al weg bij RWS?</title>
   <style>
     body {
       display: flex;
