--- a/michelle.html
+++ b/michelle.html
@@ -11,11 +11,13 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 90vh;
       font-size: 48px;
       text-align: center;
 
       font-family: 'Montserrat', sans-serif;
+      overflow: hidden;
+
     }
 
     #app {
