--- a/michelle.html
+++ b/michelle.html
@@ -60,7 +60,7 @@
     }
 
     .joke-text {
-      font-size: 0.5em;
+      font-size: 0.6em;
     }
 
     #joke {
@@ -105,7 +105,7 @@
     const jokeDiv = document.getElementById("joke");
 
     const jokes = [
-      'Elke dag een beetje b̶e̶t̶e̶r minder Michelle',
+      'Elke dag een beetje b̶e̶t̶e̶r̶  minder Michelle',
       'Hopelijk is de koffie in de klimhal beter',
       'Zullen we daar even een meeting voor inplannen?',
       'Een backwardsplanning is juist heel Agile, toch?',
