--- a/michelle.html
+++ b/michelle.html
@@ -112,7 +112,9 @@
       '*Schreeuwende kinderen in Archeon*',
       '⛵🌊🏢',
       'Maar, is er al een Product Owner?',
-      'Even een rondje Ikea doen?'      
+      'Even een rondje Ikea doen?',
+      'Professioneel opleidingscentrum',
+      'Voldoet deze site eigenlijk wel aan de BIO?'
     ]
 
     const getTime = () => {
