And more quotes

--- a/michelle.html
+++ b/michelle.html
@@ -114,7 +114,9 @@
       'Maar, is er al een Product Owner?',
       'Even een rondje Ikea doen?',
       'Professioneel opleidingscentrum',
-      'Voldoet deze site eigenlijk wel aan de BIO?'
+      'Voldoet deze site eigenlijk wel aan de BIO?',
+      'Wil je daar gemberthee bij?',
+      'Zijn er nog nabranders?'
     ]
 
     const getTime = () => {
