--- a/michelle.html
+++ b/michelle.html
@@ -82,6 +82,41 @@
       min-width: 700px;
     }
 
+    #final-countdown {
+      background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      animation: rainbow 6s linear infinite;
+      transition: all 0.3s ease-in-out;
+      background-size: 400% 100%;
+      /*Add 10% box shadow*/
+      text-shadow: 0px 0px 1px rgb(0, 0, 0);
+    }
+
+    @keyframes rainbow {
+      0%, 100% {
+        background-position: 50% 0%;
+      }
+      20% {
+        background-position: 0% 0%;
+        text-shadow: 5px 5px 1px rgb(255, 255, 255);
+      }
+      35% {
+        background-position: 0% 0%;
+        text-shadow: 2.5px 2.5px 1px rgb(0, 0, 0);
+      }
+      45% {
+        background-position: 100% 0%;
+      }
+      60% {
+        background-position: 50% 0%;
+        text-shadow: -5px -5px 1px rgb(255, 255, 255);
+      }
+      80% {
+        background-position: 30% 0%;
+      }
+    }
   </style>
 </head>
 <body>
@@ -93,6 +128,7 @@
         <div>Nog maar&nbsp;</div>
         <div id="time"></div>
       </div>
+      <div id="final-countdown">It's the final countdown...</div>
       <div class="joke-text">
         <div class="rws-text">Rijkswaterstaat&nbsp;</div>
         <div id="joke">...</div>
